# Descartes_universality

./: .gitignore  DESCARTES_WORKING_MEMORY_GUIDE.md  pyproject.toml  requirements.txt  run_vastai.sh
descartes_core/: __init__.py  ablation.py  classify.py  config.py  metrics.py  ridge_probe.py
docs/plans/: 2026-03-07-human-universality-design.md  2026-03-07-human-universality-plan.md
hidden_states/sub-440956_ses-20190210T155629_behavior+ecephys+ogen/: wm_h128_trained.npz  wm_h128_untrained.npz  wm_h256_trained.npz  wm_h256_untrained.npz  wm_h64_trained.npz  wm_h64_untrained.npz
hidden_states/sub-440959_ses-20190223T173853_behavior+ecephys+image+ogen/: wm_h128_trained.npz  wm_h128_untrained.npz  wm_h256_trained.npz  wm_h256_untrained.npz  wm_h64_trained.npz  wm_h64_untrained.npz
human_wm/: __init__.py  config.py
human_wm/ablation/: __init__.py  resample_ablation.py
human_wm/analysis/: __init__.py  universality.py
human_wm/data/: nwb_explorer.py  nwb_loader.py  patient_inventory.py
results/: classifications.json
scripts/: 00_inspect_nwb.py  01_download_data.py  01b_stream_extract.py  02_preprocess.py  03_train_surrogates.py  04_extract_hidden.py  05_run_probing.py  06_run_ablation.py  07_generate_report.py  08_photoinhibition_validation.py  10_human_explore_nwb.py  11_human_download.py  12_human_inventory.py  13_human_single_patient.py  14_human_cross_seed.py  15_human_cross_patient.py  16_human_cross_architecture.py  17_human_universality_report.py  18_human_quality_audit.py  19_corrected_diagnosis.py  _timing_helper.py
wm/: __init__.py  config.py
(+42 files in other folders)
